fixed button spacing

--- a/css/main.css
+++ b/css/main.css
@@ -208,7 +208,7 @@ nav ul li a {
   display:flex;
   flex-direction:column;
   justify-content: center;
-  margin-bottom:20px;
+  margin-bottom:50px;
 }
 
 .portfolio-piece h4 {
@@ -218,6 +218,11 @@ nav ul li a {
 .portfolio-piece figure {
   filter: drop-shadow(1px 2px 6px lightgrey);
   margin:0;
+}
+
+.piece-text {
+  min-height:350px;
+
 }
 
 .project-link {
